# cln_nwc

./: .gitignore  .pre-commit-config.yaml  .yamllint  COMPATIBILITY.md  DEVELOPMENT.md  INSTALL_CLN.md  README.md  TEST_INFRASTRUCTURE.md  flake.nix  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  main.yml
.trunk/: trunk.yaml
contrib/: ci_cleanup_regtest.sh  ci_setup_regtest.sh  plugin_wrapper.sh  restart_plugin.sh  start_mock_relay.sh  stop_mock_relay.sh
scripts/: README.md  install_cln.sh
src/: nwc.py
src/lib/: event.py  nip04.py  nip47.py  utils.py  wallet.py
tests/: .test_env  conftest.py  jest.config.js  jest.setup.js  mock_relay.py  nwc.test.js  package.json  rpc.test.js  test_nwc_units.py  utils.js
